--- a/src/Student3/Ex2/Main.css
+++ b/src/Student3/Ex2/Main.css
@@ -1,9 +1,15 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: xx-large;
 }
 
 body {
-    background-color: lightgray
+    background-color:azure
+}
+
+button {
+    background-color:darkslateblue;
+    color: whitesmoke
 }
