--- a/src/Student3/Ex2/Main.css
+++ b/src/Student3/Ex2/Main.css
@@ -13,3 +13,8 @@ button {
     background-color:darkslateblue;
     color: whitesmoke
 }
+
+.Carisma {
+    background-color:fuchsia;
+    color: blue;
+}
