--- a/src/Student3/Ex4/Main.css
+++ b/src/Student3/Ex4/Main.css
@@ -5,5 +5,13 @@
 }
 
 body {
-    background-color: lightgray
+    background-color: lightgray;
+    font-size:x-large
 }
+
+button {
+    color: darkred;
+    background-color: linen;
+    font-size: x-large;
+}
+
