--- a/src/Student3/Ex8/Main.css
+++ b/src/Student3/Ex8/Main.css
@@ -5,5 +5,7 @@
 }
 
 body {
-    background-color: lightgray
+    background-color:lightsteelblue;
+    font-size: x-large;
+    font-weight: bolder;
 }
